--- a/Kismat App/MainViewController/Xibs/BlockBtnTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/BlockBtnTVCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BlockBtnTVCell" customModule="Kismat_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BlockBtnTVCell" customModule="Kismmat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,14 +20,28 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JPN-Po-Uf6">
-                        <rect key="frame" x="5" y="0.0" width="310" height="44"/>
+                        <rect key="frame" x="64.666666666666686" y="0.0" width="191" height="44"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zBy-cy-4aw">
-                                <rect key="frame" x="140" y="7" width="30" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="HAk-En-Sxe"/>
-                                    <constraint firstAttribute="width" constant="30" id="OHl-u3-aMc"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Block User" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRW-UV-y31" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
+                                <rect key="frame" x="60" y="11" width="110" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="txtColor">
+                                        <color key="value" name="Secondary Grey"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="txtStroke" value="m"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
+                                        <real key="value" value="14"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zBy-cy-4aw">
+                                <rect key="frame" x="22" y="7" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" name="Danger"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="hand.raised.brakesignal.slash" catalog="system">
@@ -37,18 +51,14 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="Hz3-TT-KHs"/>
-                            <constraint firstAttribute="width" constant="310" id="NTx-Iz-Hat"/>
-                            <constraint firstItem="zBy-cy-4aw" firstAttribute="centerY" secondItem="JPN-Po-Uf6" secondAttribute="centerY" id="QLt-D2-X2e"/>
-                            <constraint firstItem="zBy-cy-4aw" firstAttribute="centerX" secondItem="JPN-Po-Uf6" secondAttribute="centerX" id="hU3-ZS-vrw"/>
+                            <constraint firstAttribute="height" constant="44" id="E6q-G8-YCT"/>
+                            <constraint firstAttribute="width" constant="191" id="emt-vR-ILZ"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="JPN-Po-Uf6" secondAttribute="bottom" id="FEh-bV-G5U"/>
-                    <constraint firstItem="JPN-Po-Uf6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="R6T-aS-Iqu"/>
-                    <constraint firstItem="JPN-Po-Uf6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="X1A-ct-erW"/>
-                    <constraint firstAttribute="trailing" secondItem="JPN-Po-Uf6" secondAttribute="trailing" constant="5" id="y84-ed-pbY"/>
+                    <constraint firstItem="JPN-Po-Uf6" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="84U-Us-5Tc"/>
+                    <constraint firstItem="JPN-Po-Uf6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Ezr-Bd-r9s"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -58,10 +68,18 @@
             <point key="canvasLocation" x="123.66412213740458" y="19.718309859154932"/>
         </tableViewCell>
     </objects>
+    <designables>
+        <designable name="SRW-UV-y31">
+            <size key="intrinsicContentSize" width="68.333333333333329" height="16.666666666666668"/>
+        </designable>
+    </designables>
     <resources>
         <image name="hand.raised.brakesignal.slash" catalog="system" width="128" height="104"/>
         <namedColor name="Danger">
             <color red="0.92500001192092896" green="0.30199998617172241" blue="0.30199998617172241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Secondary Grey">
+            <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
