--- a/Kismat App/Views/ViewControllers/Profile/Xibs/AboutTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Profile/Xibs/AboutTVCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="AboutTVCell" customModule="Kismat_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="AboutTVCell" customModule="Kismmat" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -22,11 +22,11 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l6f-nd-26I">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gP4-G8-zrb" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gP4-G8-zrb" customClass="RoundCornerView" customModule="Kismmat" customModuleProvider="target">
                                 <rect key="frame" x="13" y="10" width="349" height="100"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEd-wu-Vd8" customClass="fullyCustomLbl" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="6" y="8" width="65" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio.." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gEd-wu-Vd8" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="8" width="65" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="65" id="12E-na-WRJ"/>
                                             <constraint firstAttribute="height" constant="20" id="6SP-gp-Hn4"/>
@@ -45,7 +45,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="F68-w9-xdi" customClass="FormTextView" customModule="Kismat_App" customModuleProvider="target">
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="F68-w9-xdi" customClass="FormTextView" customModule="Kismmat" customModuleProvider="target">
                                         <rect key="frame" x="8" y="28" width="333" height="72"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
@@ -76,7 +76,7 @@
                                     <constraint firstAttribute="bottom" secondItem="F68-w9-xdi" secondAttribute="bottom" id="7L8-gW-3YF"/>
                                     <constraint firstAttribute="height" constant="100" id="Qbe-nW-Tq3"/>
                                     <constraint firstItem="gEd-wu-Vd8" firstAttribute="top" secondItem="gP4-G8-zrb" secondAttribute="top" constant="8" id="dHX-ab-IgD"/>
-                                    <constraint firstItem="gEd-wu-Vd8" firstAttribute="leading" secondItem="gP4-G8-zrb" secondAttribute="leading" constant="6" id="giL-Tk-99f"/>
+                                    <constraint firstItem="gEd-wu-Vd8" firstAttribute="leading" secondItem="gP4-G8-zrb" secondAttribute="leading" id="giL-Tk-99f"/>
                                     <constraint firstItem="F68-w9-xdi" firstAttribute="top" secondItem="gEd-wu-Vd8" secondAttribute="bottom" id="wBZ-2C-1wg"/>
                                     <constraint firstItem="F68-w9-xdi" firstAttribute="leading" secondItem="gP4-G8-zrb" secondAttribute="leading" constant="8" id="ygg-ZV-NAI"/>
                                 </constraints>
@@ -123,7 +123,7 @@
     </objects>
     <designables>
         <designable name="gEd-wu-Vd8">
-            <size key="intrinsicContentSize" width="49" height="21.333333333333332"/>
+            <size key="intrinsicContentSize" width="37" height="21.333333333333332"/>
         </designable>
     </designables>
     <resources>
