--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="176" id="KGk-i7-Jjw" customClass="GeneralHeaderTVCell" customModule="Kismmat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="176"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="188" id="KGk-i7-Jjw" customClass="GeneralHeaderTVCell" customModule="Kismmat" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="176"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yxB-RW-UxQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="176"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
                         <subviews>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gT6-92-Go5">
                                 <rect key="frame" x="8" y="18" width="359" height="50"/>
@@ -195,7 +195,7 @@
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cn8-Nl-EBJ">
-                                <rect key="frame" x="8" y="76" width="359" height="100"/>
+                                <rect key="frame" x="8" y="76" width="359" height="103"/>
                                 <subviews>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ba0-Xg-o6E" customClass="RoundCornerView" customModule="Kismmat" customModuleProvider="target">
                                         <rect key="frame" x="287" y="33" width="64" height="26"/>
@@ -325,14 +325,14 @@
                                     <constraint firstItem="dpP-cf-H6r" firstAttribute="leading" secondItem="bc3-O3-AQ1" secondAttribute="trailing" constant="15" id="4wQ-cl-FVk"/>
                                     <constraint firstItem="dpP-cf-H6r" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="20" id="Gka-ED-7Xx"/>
                                     <constraint firstItem="HOG-bk-97u" firstAttribute="top" secondItem="nzF-aI-iJF" secondAttribute="bottom" constant="-2" id="HAY-KS-sQB"/>
-                                    <constraint firstAttribute="bottom" secondItem="Ba0-Xg-o6E" secondAttribute="bottom" constant="41" id="JsG-hh-Kc8"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ba0-Xg-o6E" secondAttribute="bottom" constant="44" id="JsG-hh-Kc8"/>
                                     <constraint firstItem="Ba0-Xg-o6E" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="33" id="JuP-UL-yJk"/>
                                     <constraint firstItem="HOG-bk-97u" firstAttribute="leading" secondItem="bc3-O3-AQ1" secondAttribute="trailing" constant="15" id="Mh7-qV-rLn"/>
                                     <constraint firstItem="bc3-O3-AQ1" firstAttribute="leading" secondItem="cn8-Nl-EBJ" secondAttribute="leading" constant="18" id="TMc-hz-qco"/>
-                                    <constraint firstAttribute="bottom" secondItem="bc3-O3-AQ1" secondAttribute="bottom" constant="17" id="Wdl-1w-M5M"/>
+                                    <constraint firstAttribute="bottom" secondItem="bc3-O3-AQ1" secondAttribute="bottom" constant="20" id="Wdl-1w-M5M"/>
                                     <constraint firstItem="bc3-O3-AQ1" firstAttribute="top" secondItem="cn8-Nl-EBJ" secondAttribute="top" constant="18" id="XDK-7Z-5lo"/>
                                     <constraint firstItem="nzF-aI-iJF" firstAttribute="leading" secondItem="bc3-O3-AQ1" secondAttribute="trailing" constant="15" id="eHu-Jk-dY9"/>
-                                    <constraint firstAttribute="height" constant="100" id="gcb-vs-XfG"/>
+                                    <constraint firstAttribute="height" constant="103" id="gcb-vs-XfG"/>
                                     <constraint firstAttribute="trailing" secondItem="Ba0-Xg-o6E" secondAttribute="trailing" constant="8" id="jmB-TO-4Zx"/>
                                     <constraint firstAttribute="width" constant="359" id="q11-r0-cBj"/>
                                 </constraints>
@@ -498,14 +498,14 @@
                         <constraints>
                             <constraint firstItem="TDA-ZG-dfd" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="30w-OJ-Se6"/>
                             <constraint firstAttribute="trailing" secondItem="FtL-JB-NbO" secondAttribute="trailing" constant="8" id="6CC-Uw-cXm"/>
-                            <constraint firstAttribute="bottom" secondItem="TDA-ZG-dfd" secondAttribute="bottom" constant="8" id="9SM-74-v1D"/>
-                            <constraint firstAttribute="height" constant="176" id="BqW-LH-1ba"/>
+                            <constraint firstAttribute="bottom" secondItem="TDA-ZG-dfd" secondAttribute="bottom" constant="20" id="9SM-74-v1D"/>
+                            <constraint firstAttribute="height" constant="188" id="BqW-LH-1ba"/>
                             <constraint firstItem="FtL-JB-NbO" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="L4r-Dh-ihL"/>
                             <constraint firstItem="FtL-JB-NbO" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="Mbj-T5-06I"/>
                             <constraint firstItem="gT6-92-Go5" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="Y98-ow-k5p"/>
                             <constraint firstItem="gT6-92-Go5" firstAttribute="top" secondItem="yxB-RW-UxQ" secondAttribute="top" constant="18" id="aFw-7X-OAM"/>
                             <constraint firstItem="cn8-Nl-EBJ" firstAttribute="top" secondItem="gT6-92-Go5" secondAttribute="bottom" constant="8" symbolic="YES" id="apS-tf-Bxs"/>
-                            <constraint firstAttribute="bottom" secondItem="cn8-Nl-EBJ" secondAttribute="bottom" id="ewF-y0-tXB"/>
+                            <constraint firstAttribute="bottom" secondItem="cn8-Nl-EBJ" secondAttribute="bottom" constant="9" id="ewF-y0-tXB"/>
                             <constraint firstItem="cn8-Nl-EBJ" firstAttribute="leading" secondItem="yxB-RW-UxQ" secondAttribute="leading" constant="8" id="mRZ-h1-rQx"/>
                             <constraint firstAttribute="trailing" secondItem="cn8-Nl-EBJ" secondAttribute="trailing" constant="8" id="s9q-62-hn7"/>
                             <constraint firstAttribute="trailing" secondItem="gT6-92-Go5" secondAttribute="trailing" constant="8" id="vZr-b9-IFH"/>
@@ -552,7 +552,7 @@
                 <outlet property="welcomePicBtn" destination="Baj-Qv-s2c" id="y2S-2c-Cug"/>
                 <outlet property="welcomeView" destination="FtL-JB-NbO" id="gtR-56-xqB"/>
             </connections>
-            <point key="canvasLocation" x="52.671755725190835" y="66.197183098591552"/>
+            <point key="canvasLocation" x="52.671755725190835" y="69.718309859154928"/>
         </tableViewCell>
     </objects>
     <designables>
